<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CreateAccountActivity">


    <LinearLayout
        android:id="@+id/ll_container_fields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <EditText
            android:id="@+id/et_firstName"
            style="@style/EditTextFormField"
            android:background="@drawable/bg_form_field_top"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:hint="@string/hint_firstName_to_login"/>

        <EditText
            android:id="@+id/et_lastName"
            style="@style/EditTextFormField"
            android:background="@drawable/bg_form_field_top"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:hint="@string/hint_lastName_to_login"/>

        <EditText
            android:id="@+id/et_email"
            style="@style/EditTextFormField"
            android:background="@drawable/bg_form_field_top"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:hint="@string/hint_email_to_login"/>

        <EditText
            android:id="@+id/et_password"
            style="@style/EditTextFormField"
            android:layout_marginTop="-1dp"
            android:background="@drawable/bg_form_field_sqr"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:hint="@string/hint_password"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_login"
        style="@style/TextViewLink"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/ll_container_fields"
        app:layout_constraintLeft_toLeftOf="@+id/ll_container_fields"
        android:text="@string/do_login"/>

    <Button
        android:id="@+id/bt_sign_up"
        style="@style/ButtonForm"
        app:layout_constraintTop_toBottomOf="@+id/ll_container_fields"
        app:layout_constraintRight_toRightOf="@+id/ll_container_fields"
        android:text="@string/sign_up1"/>

    <ImageView
        android:layout_width="263dp"
        android:layout_height="136dp" app:srcCompat="@mipmap/logo"
        android:id="@+id/imageView" android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/ll_container_fields" app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
