<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_login"
        tools:context=".view.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:id="@+id/ll_container_fields"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">

            <EditText
                    android:id="@+id/et_email"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="13dp"
                    android:paddingBottom="13dp"
                    android:paddingLeft="17dp"
                    android:paddingRight="17dp"
                    android:inputType="textEmailAddress"
                    android:textSize="14sp"
                    android:hint="@string/hint_email"
                    android:imeOptions="actionNext"
                    android:background="@drawable/bg_form_field_top"/>

            <EditText
                    android:id="@+id/et_password"
                    android:background="@drawable/bg_form_field_bottom"
                    android:layout_marginTop="-1dp"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="13dp"
                    android:paddingBottom="13dp"
                    android:paddingLeft="17dp"
                    android:paddingRight="17dp"
                    android:inputType="textPassword"
                    android:textSize="14sp"
                    android:hint="@string/hint_password"
                    android:imeOptions="actionDone"/>
            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/lembrar_minha_senha"
                android:textColor="@color/colorText"
                android:textSize="5pt" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_forgot_password"
            style="@style/TextViewLink"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/ll_container_fields"
            app:layout_constraintLeft_toLeftOf="@+id/ll_container_fields"
            android:text="@string/forgot_my_password"/>

        <Button
                android:id="@+id/bt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:paddingLeft="38dp"
                android:paddingRight="38dp"
                style="@style/TextViewLink"
                app:layout_constraintTop_toBottomOf="@+id/ll_container_fields"
                app:layout_constraintRight_toRightOf="@+id/ll_container_fields"
                android:background="@drawable/bt_nav_header_login_bg"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:text="@string/sign_in"/>

        <TextView
            android:id="@+id/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            app:layout_constraintTop_toBottomOf="@+id/bt_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textColor="@color/colorText"
            android:text="@string/or"/>

        <Button
            android:id="@+id/bt_sign_up"
            style="@style/TextViewLink"
            android:layout_width="197dp"
            android:layout_height="41dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bt_nav_header_login_bg"
            android:paddingLeft="38dp"
            android:paddingRight="38dp"
            android:text="@string/sign_up2"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_or"
            app:layout_constraintVertical_bias="0.09" />


        <ImageView
                android:layout_width="263dp"
                android:layout_height="136dp" app:srcCompat="@mipmap/logo"
                android:id="@+id/imageView" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/ll_container_fields" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

